Documentation edits made through Mintlify web editor

--- a/style.css
+++ b/style.css
@@ -137,8 +137,9 @@ footer .navigation a {
 }
 
 .eps-btn.done {
-  background: #EDECEC;
+  background: var(--blue);
   color: #fff;
+  border-color: var(--blue);
 }
 
 /* --- Sidebar (.eps-side) --- */
