--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ footer .navigation a {
 .eps-btn.done {
   background: var(--blue);
   color: var;
-  border-color: transperent;
+  border-color: var(--blue);
 }
 
 /* --- Sidebar (.eps-side) --- */
