--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@
 #topbar-cta-button a {
   border-radius:0.25rem;
   background-color: var(--cta-bg);
+  padding-left: 16px;
+  padding-right: 16px;
 }
 #topbar-cta-button a span {
 color:var(--cta-fg);
