Documentation edits made through Mintlify web editor

--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@
   --cta-bg: #020617;    
   --cta-fg: #f9fafb;
   --rounded-xl: 0.25rem;
-  --sidebar-group-link-color: #0b0c0e;
-  --sidebar-group-link-bg: #00000014;
+  --content-primary: #0b0c0e;
+  --content-primary-bg: #00000014;
 }
 
 
@@ -29,18 +29,22 @@
   --border: rgba(241, 245, 249, .14);
   --cta-bg: #edecec;
   --cta-fg: #0c1224;
-  --sidebar-group-link-color: #fafafa;
-  --sidebar-group-link-bg: #ffffff1a;
+  --content-primary: #fafafa;
+  --content-primary-bg: #ffffff1a;
 }
 
 #sidebar-group li ul li a.text-primary {
-  color:var(--sidebar-group-link-color);
-  background:var(--sidebar-group-link-bg);
+  color:var(--content-primary);
+  background:var(--content-primary-bg);
+}
+
+#table-of-contents-content ul li a.text-primary {
+  color:var(--content-primary);
 }
 
 #sidebar-group li ul li a:hover {
-  color:var(--sidebar-group-link-color);
-  background:var(--sidebar-group-link-bg);
+  color:var(--content-primary);
+  background:var(--content-primary-bg);
 }
 
 #topbar-cta-button a {
