--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ color:var(--cta-fg);
   position: fixed;
   top: 16px;
   right: 288px;
+  z-index:10;
 }
 
 .almond-nav-bottom-section-divider {
