Documentation edits made through Mintlify web editor

--- a/style.css
+++ b/style.css
@@ -32,7 +32,9 @@
   --content-primary: #fafafa;
   --content-primary-bg: #ffffff1a;
 }
-
+.almond-layout{
+  z-index:50;
+}
 #sidebar-group li ul li a.text-primary {
   color:var(--content-primary);
   background:var(--content-primary-bg);
