Documentation edits made through Mintlify web editor

--- a/style.css
+++ b/style.css
@@ -145,10 +145,10 @@ top: 12px;
 right: 288px;
 z-index:10;
 }
-[aria-label="Toggle dark mode"] button:nth-of-type(2){
+[aria-label="Toggle dark mode"] div:nth-of-type(2){
   display:none;
 }
-[aria-label="Toggle dark mode"] button:first-child {
+[aria-label="Toggle dark mode"] div:first-child {
 justify-content: center;
 }
 /* =================================
