--- a/style.css
+++ b/style.css
@@ -171,6 +171,15 @@ justify-content: center;
   }
 }
 
+#table-of-contents::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 2px;             
+  height: 100%;
+  background: var(--orange); 
+  
 /* --- Footer next/prev --- */
 footer .navigation a {
   background: var(--card);
