--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@
   border-left: 2px solid var(--orange) !important; 
 }
 
+#table-of-contents-content a.active {
+  border-left: 2px solid var(--orange) !important;
+}
+
 #sidebar-group li ul li a:hover {
   color:var(--content-primary);
   background:var(--content-primary-bg);
