Documentation edits made through Mintlify web editor

--- a/style.css
+++ b/style.css
@@ -46,8 +46,10 @@
   border-color: #E73600;
 }
 
-
-
+#table-of-contents-content li {
+  --primary-light: #E73600;
+  --primary: #E73600;
+}
 #sidebar-group li ul li a:hover {
   color:var(--content-primary);
   background:var(--content-primary-bg);
